fixed issue on mobile for location scroll.

--- a/src/app/components/location/location.css
+++ b/src/app/components/location/location.css
@@ -1,5 +1,6 @@
 .location {
     position: relative;
+    z-index: 10000;
 }
 
 .location .slidePage {
@@ -11,7 +12,7 @@
     width: 100%;
     margin: auto;
     z-index: 10;
-
+    background-color: #f1fbfa;
 }
 
 .location a[title='Interactive JavaScript maps'] {
@@ -19,9 +20,9 @@
 }
 
 .location .cover {
-    position: absolute;
+    position: relative;
     width: 100%;
-    z-index: 10000;
+    height: 100%;
 }
 
 @media only screen and (max-width: 1024px) {
